src/test/deca/context/invalid/variable/invalid_var_assign_boolean_int.deca
// Description:
//    test invalid assignation between bool and int
//    Test rule 3.28
//
// [Begin Result]
//invalid_var_assign_boolean_int.deca:14:11: Incompatible types, expected int but got boolean. Rule 3.28.
// [End Result]
//
// History:
//    created on 06/01/2025

{
   boolean a = false;
   int b = a;
}
